gymcrm/src/main/java/com/example/gymcrm/api/rest/error/exception/TrainerNotFoundException.java
package com.example.gymcrm.api.rest.error.exception;

public class TrainerNotFoundException extends Exception {
    public TrainerNotFoundException(String message) {
        super(message);
    }
}
